# sandbox

next-app/: package.json  pnpm-lock.yaml
next-app/app/: globals.css  page.tsx
next-app/app/quick/: page.tsx
next-app/app/tic-tac-toe/: page.tsx
next-app/components/: board.tsx  square.tsx
next-app/styles/: components.css
on-react/: index.html  index.js
rag/: .gitignore  CLAUDE.md  README.md  chat.py  compare_bots.py  design.md  evaluate.py  ingest.py  pyproject.toml
rag/output/: comparison.md  fulltext_bot_result.md  hybrid_bot_result.md  rag_bot_result.md
rag/questions/: default.json
rag/src/: __init__.py  bot.py  chunker.py  config.py  document.py  embeddings.py  evaluator.py  fulltext_bot.py  hybrid_bot.py  indexer.py  llm_client.py  options.py  pdf_loader.py  prompt_builder.py  rag_bot.py  retriever.py  searcher.py  vector_store.py
rag/src/eval/: __init__.py  criteria.py  evaluator.py
rag/src/ingestion/: __init__.py  chunker.py  document_loader.py  indexer.py
rag/src/retrieval/: __init__.py  bot.py  index_loader.py  prompt_builder.py  searcher.py
