[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "google-genai>=1.70.0",
    "jupyter>=1.1.1",
    "litellm",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
