[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "google-genai>=1.70.0",
    "jupyter>=1.1.1",
    "litellm",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "llama-index-postprocessor-flag-embedding-reranker",
    "llama-index-readers-file",
    "llama-index-vector-stores-chroma",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
