[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "litellm>=1.83.0",
    "llama-index-core>=0.14.19",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-postprocessor-sbert-rerank>=0.5.0",
    "llama-index-readers-file",
    "llama-index-vector-stores-chroma>=0.5.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
